# universal-launcher

./: .gitignore  CMakeLists.txt  README.md  launch.sh  main.cpp  qml.qrc  resources.qrc  universal-launcher_en_GB.ts  xmake.lua
assets/: resources.qrc
assets/i18n/: universal-launcher_en_GB.qm  universal-launcher_en_GB.ts  universal-launcher_fr_FR.qm  universal-launcher_fr_FR.ts
assets/lang/: universal-launcher_en_GB.ts
assets/qml/common/ui/: UButton.qml  UButtonIcon.qml  UMenu.qml  UMenuItem.qml  UScrollBar.qml  UTheme.qml
assets/qml/main/: Main.qml  MainWindow.qml  app.qml
assets/qml/main/components/: AuthModal.qml  CustomPage.qml  ModpackCard.qml
assets/qml/setup/: Setup.qml  SetupWindow.qml
notsecrets/: secrets.cpp  secrets.h
qml/: Main.qml  app.qml  main.qml
qml/components/: CustomPage.qml
qml/components/modpack/: ModpackVignette.qml
qml/components/navigation/: Sidebar.qml  SidebarItem.qml  SidebarUserAccount.qml
qml/components/ui/: UBusyIndicator.qml  UButton.qml
qml/pages/: accountPage.qml  modpacksPage.qml  settingsPage.qml
qml/views/: Login.qml  Main.qml
src/: AppGlobal.cpp  AppGlobal.h  CMakeLists.txt  QObjectMemory.h  main.cpp  settings.cpp  settings.h  universal-launcher_en_GB.ts
src/auth/: accountdata.cpp  accountdata.h  accounts_manager.cpp  accounts_manager.h  authentication.cpp  authentication.h  minecraft_profile.cpp  minecraft_profile.h
src/systems/: folder.cpp  folders.h  router.cpp  router.h  settings.cpp  settings.h  theme_object.cpp  themes.cpp  themes.h  translator.cpp  translator.h
xmake/scripts/: rules.lua
(+15 files in other folders)
